--- a/index.html
+++ b/index.html
@@ -5,59 +5,19 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>SWADE / Deadlands Powers Reference</title>
 
-  <!-- Tailwind CDN (simple) -->
+  <!-- Tailwind -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
   <style>
-    /* Modal hidden by default; add `.open` to show it */
-    .modal {
-      position: fixed;
-      inset: 0;
-      display: none;
-      align-items: center;
-      justify-content: center;
-      background: rgba(0,0,0,0.6);
-      z-index: 50;
-      padding: 1.25rem;
-    }
-    .modal.open {
-      display: flex;
-    }
-
-    .modal-content {
-      background: #fff;
-      border-radius: .5rem;
-      max-width: 900px;
-      width: 100%;
-      max-height: 80vh;
-      overflow-y: auto;
-      padding: 1.25rem;
-      position: relative;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-      -webkit-overflow-scrolling: touch;
-    }
-
-    .close-btn {
-      position: absolute;
-      top: 0.5rem;
-      right: 0.5rem;
-      font-weight: 700;
-      background: transparent;
-      border: none;
-      cursor: pointer;
-      font-size: 1.125rem;
-    }
-
-    /* keep full_text newlines */
-    .modal-text {
-      white-space: pre-wrap;
-    }
-
-    /* visible focus outline for keyboard users */
-    .focus-ring:focus {
-      outline: 3px solid rgba(99,102,241,0.35);
-      outline-offset: 2px;
-    }
+    .modal { position: fixed; inset: 0; display: none; align-items: center; justify-content: center;
+             background: rgba(0,0,0,0.6); z-index: 50; padding: 1.25rem; }
+    .modal.open { display: flex; }
+    .modal-content { background: #fff; border-radius: .5rem; max-width: 900px; width: 100%;
+                     max-height: 80vh; overflow-y: auto; padding: 1.25rem; position: relative; }
+    .close-btn { position: absolute; top: .5rem; right: .5rem; font-weight: 700;
+                 background: transparent; border: none; cursor: pointer; font-size: 1.125rem; }
+    .modal-text { white-space: pre-wrap; }
+    .focus-ring:focus { outline: 3px solid rgba(99,102,241,0.35); outline-offset: 2px; }
   </style>
 </head>
 <body class="bg-gray-100 text-gray-900">
@@ -74,10 +34,8 @@
         <option>Heroic</option>
         <option>Legendary</option>
       </select>
-
       <input id="searchBox" type="search" placeholder="Search name or summary..." 
              class="border p-2 flex-1" aria-label="Search powers" />
-
       <button id="clearBtn" class="border p-2" title="Clear filters">Clear</button>
     </div>
 
@@ -85,24 +43,28 @@
     <div id="powersList" class="grid gap-3 md:grid-cols-2"></div>
   </div>
 
-  <!-- Modal (hidden by default). Click outside .modal-content to close -->
+  <!-- Modal -->
   <div id="modal" class="modal" role="dialog" aria-modal="true" aria-hidden="true">
     <div class="modal-content" id="modalContent" onclick="event.stopPropagation()">
       <button id="modalClose" class="close-btn focus-ring" aria-label="Close (Esc)">✕</button>
       <h2 id="modalName" class="text-xl font-bold"></h2>
       <p id="modalRank" class="text-sm text-gray-600 mb-2"></p>
 
-      <div class="text-sm text-gray-700 mb-2">
-        <strong>Power Points:</strong> <span id="modalPP"></span> &nbsp; • &nbsp;
-        <strong>Range:</strong> <span id="modalRange"></span> &nbsp; • &nbsp;
-        <strong>Duration:</strong> <span id="modalDuration"></span>
+      <div class="text-sm text-gray-700 mb-2 space-y-1">
+        <div>🔋 <strong>Power Points:</strong> <span id="modalPP"></span></div>
+        <div>🎯 <strong>Range:</strong> <span id="modalRange"></span></div>
+        <div>🕑 <strong>Duration:</strong> <span id="modalDuration"></span></div>
       </div>
 
       <hr class="my-3" />
       <div id="modalText" class="modal-text text-gray-800"></div>
+
+      <div id="modalNotes" class="mt-4 hidden bg-yellow-50 border border-yellow-200 p-3 rounded">
+        <h3 class="font-semibold mb-1">Special Notes</h3>
+        <div id="modalNotesContent" class="text-sm text-gray-800"></div>
+      </div>
     </div>
   </div>
-
 
   <script>
     let allPowers = [];
@@ -113,43 +75,29 @@
     const clearBtn = document.getElementById('clearBtn');
 
     const modal = document.getElementById('modal');
-    const modalContent = document.getElementById('modalContent');
     const modalName = document.getElementById('modalName');
     const modalRank = document.getElementById('modalRank');
     const modalPP = document.getElementById('modalPP');
     const modalRange = document.getElementById('modalRange');
     const modalDuration = document.getElementById('modalDuration');
     const modalText = document.getElementById('modalText');
+    const modalNotes = document.getElementById('modalNotes');
+    const modalNotesContent = document.getElementById('modalNotesContent');
     const modalClose = document.getElementById('modalClose');
 
-    // Load powers.json
     async function loadPowers() {
-      statusEl.textContent = 'Loading powers...';
-      listEl.innerHTML = '';
       try {
         const res = await fetch('powers.json', {cache: "no-store"});
         if (!res.ok) throw new Error('HTTP ' + res.status);
         allPowers = await res.json();
-
-        if (!Array.isArray(allPowers)) {
-          throw new Error('Invalid JSON (expected an array)');
-        }
-
         statusEl.textContent = `Loaded ${allPowers.length} powers.`;
         renderPowers();
       } catch (err) {
         console.error('Failed to load powers.json', err);
-        statusEl.innerHTML = `
-          <span class="text-red-600">Could not load <strong>powers.json</strong>.</span>
-          <div class="mt-2 text-sm text-gray-700">
-            If you opened the file directly from disk your browser may block loading JSON.
-            Try opening with VS Code Live Server, or run <code>python3 -m http.server</code> in the folder,
-            or use the Live Server extension in VS Code.
-          </div>`;
+        statusEl.innerHTML = `<span class="text-red-600">Could not load powers.json</span>`;
       }
     }
 
-    // Render list given current filters
     function renderPowers() {
       const rank = rankFilter.value;
       const q = (searchBox.value || '').toLowerCase().trim();
@@ -170,30 +118,31 @@
       filtered.forEach(p => {
         const card = document.createElement('div');
         card.className = 'border rounded p-3 bg-white cursor-pointer hover:shadow focus-ring';
-        card.tabIndex = 0; // keyboard focusable
+        card.tabIndex = 0;
 
         const header = document.createElement('div');
-        header.className = 'flex justify-between';
+        header.className = 'flex justify-between items-baseline';
+        header.innerHTML = `
+          <span class="font-semibold text-lg">${p.name || '—'}</span>
+          <span class="text-sm text-gray-600">${p.rank || ''}</span>
+        `;
 
-        const nameSpan = document.createElement('span');
-        nameSpan.className = 'font-semibold';
-        nameSpan.textContent = p.name || '—';
-
-        const rankSpan = document.createElement('span');
-        rankSpan.className = 'text-sm text-gray-600';
-        rankSpan.textContent = p.rank || '';
-
-        header.appendChild(nameSpan);
-        header.appendChild(rankSpan);
+        const stats = document.createElement('div');
+        stats.className = 'text-xs text-gray-700 mt-1 flex flex-wrap gap-2';
+        stats.innerHTML = `
+          <span>🔋 ${p.power_points || '-'}</span>
+          <span>🎯 ${p.range || '-'}</span>
+          <span>🕑 ${p.duration || '-'}</span>
+        `;
 
         const summary = document.createElement('p');
-        summary.className = 'text-sm mt-1 text-gray-700';
+        summary.className = 'text-sm mt-2 text-gray-800';
         summary.textContent = p.summary || '';
 
         card.appendChild(header);
+        card.appendChild(stats);
         card.appendChild(summary);
 
-        // click or Enter key to open
         card.addEventListener('click', () => openModal(p));
         card.addEventListener('keydown', (ev) => {
           if (ev.key === 'Enter' || ev.key === ' ') {
@@ -206,19 +155,23 @@
       });
     }
 
-    // Modal open/close
     function openModal(p) {
       modalName.textContent = p.name || '';
       modalRank.textContent = p.rank ? `Rank: ${p.rank}` : '';
       modalPP.textContent = p.power_points || '';
       modalRange.textContent = p.range || '';
       modalDuration.textContent = p.duration || '';
-      modalText.textContent = p.full_text || p.description || '';
+      modalText.textContent = p.full_text || '';
+
+      if (p.notes) {
+        modalNotes.classList.remove('hidden');
+        modalNotesContent.textContent = p.notes;
+      } else {
+        modalNotes.classList.add('hidden');
+      }
 
       modal.classList.add('open');
       modal.setAttribute('aria-hidden', 'false');
-
-      // focus the close button for keyboard users
       modalClose.focus();
     }
 
@@ -227,31 +180,14 @@
       modal.setAttribute('aria-hidden', 'true');
     }
 
-    // Close when clicking the backdrop (outside modal content)
-    modal.addEventListener('click', (e) => {
-      if (e.target === modal) {
-        closeModal();
-      }
-    });
-
-    // Close when pressing Esc
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape') closeModal();
-    });
-
-    // wire the close button
+    modal.addEventListener('click', (e) => { if (e.target === modal) closeModal(); });
+    document.addEventListener('keydown', (e) => { if (e.key === 'Escape') closeModal(); });
     modalClose.addEventListener('click', closeModal);
 
-    // filters
     rankFilter.addEventListener('change', renderPowers);
     searchBox.addEventListener('input', renderPowers);
-    clearBtn.addEventListener('click', () => {
-      rankFilter.value = '';
-      searchBox.value = '';
-      renderPowers();
-    });
+    clearBtn.addEventListener('click', () => { rankFilter.value = ''; searchBox.value = ''; renderPowers(); });
 
-    // Start
     document.addEventListener('DOMContentLoaded', loadPowers);
   </script>
 </body>
