--- a/index.html
+++ b/index.html
@@ -9,24 +9,29 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
   <style>
+    /* Modal */
     .modal { position: fixed; inset: 0; display: none; align-items: center; justify-content: center;
-             background: rgba(0,0,0,0.6); z-index: 50; padding: 1.25rem; }
+             background: rgba(0,0,0,0.6); z-index: 50; padding: 0; }
     .modal.open { display: flex; }
-    .modal-content { background: #fff; border-radius: .5rem; max-width: 900px; width: 100%;
-                     max-height: 80vh; overflow-y: auto; padding: 1.25rem; position: relative; }
-    .close-btn { position: absolute; top: .5rem; right: .5rem; font-weight: 700;
-                 background: transparent; border: none; cursor: pointer; font-size: 1.125rem; }
+    .modal-content { background: #fff; border-radius: .5rem; width: 100%; height: auto;
+                     max-height: 90vh; overflow-y: auto; padding: 1.25rem; position: relative; }
+    @media (min-width: 768px) { /* Desktop modal */
+      .modal-content { max-width: 900px; height: auto; max-height: 80vh; margin: 2rem; }
+    }
+    .close-btn { position: absolute; top: .75rem; right: .75rem; font-weight: 700;
+                 background: transparent; border: none; cursor: pointer; font-size: 1.5rem; }
     .modal-text { white-space: pre-wrap; }
     .focus-ring:focus { outline: 3px solid rgba(99,102,241,0.35); outline-offset: 2px; }
   </style>
 </head>
 <body class="bg-gray-100 text-gray-900">
 
-  <div class="container mx-auto p-6">
-    <h1 class="text-3xl font-bold mb-4">SWADE / Deadlands Powers</h1>
+  <div class="container mx-auto p-4">
+    <h1 class="text-2xl md:text-3xl font-bold mb-4">SWADE / Deadlands Powers</h1>
 
-    <div class="flex gap-2 mb-4">
-      <select id="rankFilter" class="border p-2" aria-label="Filter by rank">
+    <!-- ✅ Mobile-friendly filter bar -->
+    <div class="flex flex-wrap gap-2 mb-4">
+      <select id="rankFilter" class="border p-2 rounded flex-shrink" aria-label="Filter by rank">
         <option value="">All Ranks</option>
         <option>Novice</option>
         <option>Seasoned</option>
@@ -34,13 +39,18 @@
         <option>Heroic</option>
         <option>Legendary</option>
       </select>
+
       <input id="searchBox" type="search" placeholder="Search name or summary..." 
-             class="border p-2 flex-1" aria-label="Search powers" />
-      <button id="clearBtn" class="border p-2" title="Clear filters">Clear</button>
+             class="border p-2 flex-grow min-w-[150px] rounded" aria-label="Search powers" />
+
+      <button id="clearBtn" class="border p-2 rounded bg-gray-50 flex-shrink-0" title="Clear filters">
+        Clear
+      </button>
     </div>
 
     <div id="status" class="text-sm text-gray-600 mb-4">Loading powers...</div>
-    <div id="powersList" class="grid gap-3 md:grid-cols-2"></div>
+    <!-- Mobile = 1 column, Desktop = 2 -->
+    <div id="powersList" class="grid gap-3 grid-cols-1 md:grid-cols-2"></div>
   </div>
 
   <!-- Modal -->
@@ -123,7 +133,7 @@
         const header = document.createElement('div');
         header.className = 'flex justify-between items-baseline';
         header.innerHTML = `
-          <span class="font-semibold text-lg">${p.name || '—'}</span>
+          <span class="font-semibold text-base md:text-lg">${p.name || '—'}</span>
           <span class="text-sm text-gray-600">${p.rank || ''}</span>
         `;
 
