--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>SWADE & Deadlands - Powers</title>
+  <title>Deadlands Powers App</title>
 
   <!-- Tailwind -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -27,32 +27,38 @@
 <body class="bg-gray-100 text-gray-900">
 
   <div class="container mx-auto p-4">
-    <h1 class="text-2xl md:text-3xl font-bold mb-4">SWADE & Deadlands – Powers</h1>
+    <h1 class="text-2xl md:text-3xl font-bold mb-4">Deadlands Powers App</h1>
 
-    <!-- Tabs + Common Modifiers -->
+    <!-- Tabs + Rank Filter + Common Modifiers -->
     <div class="flex flex-col sm:flex-row sm:items-center justify-between gap-3 mb-4">
       <div class="flex gap-4 border-b pb-2">
         <button id="tabAll" class="pb-2 focus-ring tab-active">All Powers</button>
         <button id="tabFavs" class="pb-2 focus-ring">My Powers ⭐</button>
       </div>
-      <button id="btnCommonMods" class="border p-2 rounded bg-white focus-ring">⚡ Common Modifiers</button>
+      <div class="flex items-center gap-2">
+        <select id="rankFilter" class="border p-2 rounded">
+          <option value="">All Ranks</option>
+          <option>Novice</option>
+          <option>Seasoned</option>
+          <option>Veteran</option>
+          <option>Heroic</option>
+        </select>
+        <button id="btnCommonMods" class="border p-2 rounded bg-white focus-ring">🔧 Common Modifiers</button>
+      </div>
     </div>
 
-    <!-- Filters -->
-    <div class="flex flex-wrap gap-2 mb-4">
-      <select id="rankFilter" class="border p-2 rounded flex-shrink">
-        <option value="">All Ranks</option>
-        <option>Novice</option>
-        <option>Seasoned</option>
-        <option>Veteran</option>
-        <option>Heroic</option>
-      </select>
-      <input id="searchBox" type="search" placeholder="Search name or summary..." 
-             class="border p-2 flex-grow min-w-[150px] rounded" />
-      <button id="clearBtn" class="border p-2 rounded bg-gray-50 flex-shrink-0">Clear</button>
+    <!-- Search + Clear -->
+    <div class="flex items-center gap-2 mb-4">
+      <input id="searchBox" 
+             type="search" 
+             placeholder="Search name or summary..." 
+             class="border p-2 rounded flex-grow min-w-0" />
+      <button id="clearBtn" 
+              class="border p-2 rounded bg-gray-50 flex-shrink-0">
+        Clear
+      </button>
     </div>
 
-    <div id="status" class="text-sm text-gray-600 mb-4">Loading powers...</div>
     <div id="powersList" class="grid gap-3 grid-cols-1 md:grid-cols-2"></div>
   </div>
 
@@ -65,10 +71,10 @@
       <h2 id="modalName" class="text-2xl font-bold mb-1"></h2>
       <p id="modalRank" class="text-sm text-red-700 font-semibold mb-3"></p>
 
-      <!-- Stats row (emoticon style) -->
+      <!-- Stats row -->
       <div class="text-sm text-gray-700 mb-3 space-y-1">
         <div>🔋 <strong>Power Points:</strong> <span id="modalPP"></span></div>
-        <div>🎯 <strong>Range:</strong> <span id="modalRange"></span></div>
+        <div>📏 <strong>Range:</strong> <span id="modalRange"></span></div>
         <div>🕑 <strong>Duration:</strong> <span id="modalDuration"></span></div>
       </div>
 
@@ -77,9 +83,9 @@
 
       <!-- Full description -->
       <div class="mb-6">
-  <h3 class="font-semibold mb-2">Description</h3>
-  <div id="modalText" class="modal-text text-gray-900 text-base leading-relaxed"></div>
-</div>
+        <h3 class="font-semibold mb-2">Description</h3>
+        <div id="modalText" class="modal-text text-gray-900 text-base leading-relaxed"></div>
+      </div>
 
       <!-- Divider before modifiers -->
       <hr class="my-3 border-gray-300" />
@@ -90,10 +96,10 @@
         <div id="modalModifiers" class="space-y-3"></div>
       </div>
 
-            <!-- Divider after modifiers -->
+      <!-- Divider after modifiers -->
       <hr class="my-3 border-gray-300" />
 
-            <!--Source-->
+      <!-- Source -->
       <p id="modalSource" class="text-sm text-gray-600 mb-3"></p>
 
       <!-- Buttons -->
@@ -120,7 +126,6 @@
     let commonModifiers = [];
 
     const listEl = document.getElementById('powersList');
-    const statusEl = document.getElementById('status');
     const rankFilter = document.getElementById('rankFilter');
     const searchBox = document.getElementById('searchBox');
     const clearBtn = document.getElementById('clearBtn');
@@ -153,7 +158,6 @@
       loadFavorites();
       renderCommonModifiers();
       renderPowers();
-      statusEl.textContent = `Loaded ${allPowers.length} powers.`;
     }
 
     function loadFavorites() {
@@ -203,7 +207,7 @@
 
         const stats = `<div class="text-xs text-gray-700 mt-1 flex gap-2">
           <span>🔋 ${p.power_points}</span>
-          <span>🎯 ${p.range}</span>
+          <span>📏 ${p.range}</span>
           <span>🕑 ${p.duration}</span>
         </div>`;
 
@@ -224,7 +228,6 @@
       modalPP.textContent = p.power_points;
       modalRange.textContent = p.range;
       modalDuration.textContent = p.duration;
-      
       modalText.innerHTML = p.full_text;
 
       modalModifiers.innerHTML = "";
@@ -241,7 +244,6 @@
         });
 
         document.getElementById("modalSource").textContent = `Source: ${p.source}`;
-
       } else {
         modalModifiersContainer.classList.add("hidden");
       }
