--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
 </head>
 <body class="bg-gray-100 text-gray-900">
 
-  <div class="container mx-auto p-4">
-    <h1 class="text-2xl md:text-3xl font-bold mb-4">Deadlands Powers App</h1>
+  <div class="container mx-auto p-4 text-center">
+    <!-- Logo -->
+    <img src="https://raw.githubusercontent.com/TKrom16/Deadlands-Powers/refs/heads/main/New_Deadlands_Logo.png" alt="Deadlands Logo" 
+         alt="Deadlands Logo" 
+         class="mx-auto w-full max-w-md mb-4">
+
+    <!-- Title -->
+    <h1 class="text-2xl md:text-3xl font-bold mb-6">Powers App</h1>
+  </div>
 
     <!-- Tabs + Rank Filter + Common Modifiers -->
     <div class="flex flex-col sm:flex-row sm:items-center justify-between gap-3 mb-4">
